--- a/data/chap01.tex
+++ b/data/chap01.tex
@@ -1,61 +1,87 @@
 \chapter{西安建筑科技大学学位论文撰写标准}
+博士、硕士学位论文是评判学位申请者学术水平、授予其学位的主要依据，是科研领域重要的文献资料。为规范我校博士、硕士学位论文的格式，保证学位论文质量，根据国家标准《学位论文编写规则》《信息与文献参考文献著录规则》等，特制定本标准\footnote{引自《西安建筑科技大学研究生学位论文撰写标准》（西建大研〔2023〕7号）}。
+
+本标准适用于向我校申请博士、硕士学位的各类学位论文。 凡不符合本标准的学位论文，一律不予受理。博士、硕士毕业论文参考本标准。
 \section{学位论文的基本要求}
 \begin{enumerate}
-\item 硕士学位论文应能表明作者确已在本门学科上掌握了坚实的基础理论和系统的专门知识，并对所研究的课题有新见解，有从事科学研究工作或担负专门技术工作的能力。硕士学位论文要求为3－5 万字（含图表）。\footnote{引自《西安建筑科技大学研究生手册》（2017版），见/attachments。}
-\item 博士学位论文应能表明作者确已在本门学科上掌握了坚实宽广的基础理论和系统深入的专门知识，并具有独立从事科学研究工作的能力，在科学或专门技术上做出了创造性的成果。博士学位论文要求为5－7 万字（含图表）。
+    \item 硕士学位论文应能表明作者确已在本学科专业或交叉学科上掌握了坚实的基础理论和系统的专门知识，并对所研究的课题有新见解，有从事科学研究工作或担负专门技术工作的能力。
+    \item 博士学位论文应能表明作者确已在本学科专业或交叉学科上掌握了坚实宽广的基础理论和系统深入的专门知识，并具有独立从事科学研究工作的能力，在科学或专门技术上做出了创造性的成果。
+    \item 研究生学位论文一般应用汉字撰写。硕士学位论文要求为3-5万字（含图表），博士学位论文要求为5-7万字（含图表）。各学位评定分委员会可根据本分会涉及学科专业的特点提出具体要求。
 \end{enumerate}
 
-\section{学位论文的内容要求}
-学位论文一般由三部分组成：前置部分、主体部分、附录部分。
+\section{学位论文的撰写要求}
+学位论文一般由三大部分构成，依次为前置部分、主体部分、结尾部分。
 
-\subsection{前置部分}
-包括封面、声明、主要符号表。
+\subsection{前置部分，包括封面、指导教师团队页（如有）、答辩委员会页、声明页}
 \subsubsection{封面}
-论文封面按照国家规定的标准由研究生院统一印制；论文题目一般应在25 个汉字以
-内；封面上的分类号按《中国图书资料分类法》中的分类目录填写，精确到二级。
+论文封面采用学校统一印制的学位论文封面，学术型、专业型硕士及博士分别使用不同格式的封面。学位论文封面内容应包含分类号、论文题目、作者姓名、学号、所在学院、学科名称/专业学位类别（领域）名称、指导教师、答辩日期等内容。分类号按《中国图书资料分类法》中的分类目录填写。
+
+\paragraph{中文封面}
+封面内容应包含论文题目、作者姓名、学号、所在学院、学科名称/专业学位类别（领域）名称、指导教师（合作导师、导师团队）、答辩日期等内容。
+中文论文题目应简明扼要地概括和反映出论文的核心内容，一般不宜超过35字，必要时可加副标题。
+
+学科名称/专业学位类别（领域）名称的中文名称以国务院学位委员会、教育部发布的《学位授予和人才培养目录》为准填写。
+学号、作者姓名、所在学院、答辩日期按照本人实际情况填写。
+
+指导教师:填写导师姓名，后附导师职称“教授”“研究员”等。如有合作导师或导师团队指导，需体现如下信息:
+\begin{enumerate}[1)]
+    \item 合作导师:经正式批准备案的合作导师姓名，后附导师职称“教授”“研究员”等，需与招生简章保持一致。
+    \item 导师团队:经正式批准备案的指导教师团队名称，需与招生简章保持一致。指导教师团队成员信息在单独的“指导教师团队”页体现。
+\end{enumerate}
+日期填写论文答辩日期。
+
+\paragraph{英文封面}
+英文封面的内容与中文封面相对应。
+
+\subsubsection{指导教师团队页（如有）}
+指导教师团队页应按照导师团队中成员的基本信息如实填写。
+
+\subsubsection{答辩委员会页}
+答辩委员会页应按照论文答辩安排如实填写，涉密论文无需填写此页。
 
 \subsubsection{声明}
 \declaration
 
-\subsubsection{主要符号表}
-\begin{enumerate}[1)]
-    \item 全文中常用的符号及意义在主要符号表中列出；
-    \item 符号排列顺序按英文及其他相关文字顺序排出；
-    \item 主要符号表页码另编。
-\end{enumerate}
+声明页采用研究生院统一提供的模板，不再作其他格式要求。
 
-\subsection{主体部分}
-包括中英文摘要及关键词、目录、绪论或前言、正文、结论、参考文献及研究生在读期间的研究成果等。
+
+\subsection{主体部分，主要包括中英文摘要及关键词、目录、主要符号表、正文（含绪论和结论）、参考文献、致谢等}
+
 \subsubsection{中英文摘要及关键词}
 摘要是关于论文的内容不加注释和评论的简短陈述，具有独立性和自含性。它主要是简要说明研究工作的目的、方法、结果和结论，重点说明本论文的成果见解等。
+\paragraph{中文摘要及关键词}
+中文摘要页:硕士学位论文摘要应突出论文的新见解，博士学位论文摘要应突出论文的创新点。摘要页由论文题目及学位类型、学科专业、摘要正文、关键词、论文类型、资助申明等部分组成。摘要上方写论文题目、学位类型、学科专业。摘要正文博士约1000—1500字，硕士约700—1000字，关键词3—5个，之间用“；”分开，一般应从《汉语主题词表》中摘选。当《汉语主题词表》中的词不足以反映主题时，可由申请人自主设计。
 
-\begin{enumerate}[1)]
-    \item 中文摘要：硕士论文摘要应突出论文的新见解部分；博士论文摘要应突出论文的创造性成果部分。约800 字左右。在摘要上方，写上论文题目、专业、博（硕）士生姓名及导师姓名。
-    
-    摘要的最下方写上（没有可不写）本研究得到$\times\times\times$基金的资助。
-    \item 英文摘要：摘要前也需论文题目，要有导师和研究生的姓名（英文或汉语拼音）（例见附件3）
-    英文摘要撰写要求如下：
-    \begin{enumerate}
-        \item 用词应准确，使用本学科通用的词汇；
-        \item 摘要中主语（作者）常常省略，因而一般使用被动语态，应使用正确的时态并要注意主、谓的一致。必要的冠词不能省略；
-        \item 中、英文摘要的内容须一致。
-    \end{enumerate}
-\end{enumerate}
+论文类型:理论研究；应用基础；应用研究；研究报告；设计报告；案例分析；调研报告；产品研发；工程设计；工程/项目管理；其他。
 
-关键词是为了文献标引工作从论文中选取出来用以表示全文主题内容信息的术语。关键词应从《汉语主题词表》中摘选，当《汉语主题词表》的词不足以反映主题，可由作者设计关键词。论文类型分为基础研究、应用研究、开发研究、其他等四种，作者根据自己的工作选择一种。用语应精炼概括，并有本论文的关键词3—5 个。英文关键词（Keywords）按相应专业的标准术语写出。
+如果论文的主体工作得到了有关基金资助，应在论文类型后另起一段标注:本研究得到$\times\times\times$基金项目（编号:$\Box\Box\Box$）的资助。
+
+\paragraph{英文摘要}
+英文摘要的内容和格式均须与中文摘要一致，要求用词准确，符合英文语法。采用第三人称单数语气介绍该学位论文内容。叙述的基本时态为一般现在时，确实需要强调过去的事情或者已经完成的行为才使用过去时、完成时等其他时态。可以多采用被动语态，但要避免出现用“Thispaper”作为主语代替作者完成某些研究行为。中国姓名译为英文时用汉语拼音，按照名前姓后的原则，名和姓均用全名，不宜用缩写。姓和名的第一个字母大写，名用双中文字时两个字的拼音之间可以不用短划线，但容易引起歧义时必须用短划线。例如“李美娟”译为“Meijuan Li”或 “Mei-juan Li”，而“李居安”则必须译为“Ju-an Li”。
 
 \subsubsection{目录}
-按照论文的章节附录等前后顺序，编写序号、名称和页码。目录页排在中英文摘要之
-后，另页右面起。
+目录由编号、标题和页码组成。包括中英文摘要、正文（含绪论和结论）的一级、二级和三级标题及其编号、参考文献、致谢、附录、攻读学位期间取得的研究成果等内容。目录页排在中英文摘要之后，另页右面起。
 \begin{enumerate}[1)]
-    \item 目录中章、节号均使用阿拉伯数字，如：章为1，分层次序为1.1 及1.1.1 等3个层次；
+    \item 目录中章、节号均使用阿拉伯数字，如:章为“第1章”，分层次序为1.1及1.1.1等3个层次；
     \item 目录中应有页码，页码从正文开始直至全文结束；
     \item 目录页码另编；
-    \item 页码应放置在页面下角的外侧，页码字号一般为五号宋体。
+    \item 页码应放置在页面下角的外侧，页码字号为五号 Times New Roman。
 \end{enumerate}
 
-\subsubsection{绪论或前言}
-作为主体部分的开端，将要说明作者所做工作的目的、范围、国内外进展情况、前人研究成果、本人的研究设想、研究方法等。具体要求如下：
+\subsubsection{主要符号表}
+如果论文中使用了大量的物理量符号、标志、缩略词、专门计量单位、自定义名词和术语等，应将全文中常用的这些符号及意义列出。
+
+如果上述符号和缩略词使用次数不多，可以不设专门的主要符号表，但在论文中首次出现时须加以说明。
+
+论文中主要符号全部采用法定单位，严格执行国家标准（GB3100-93）有关“量和单位”的规定。单位名称采用国际通用符号或中文名称，但全文应统一，不得两种混用。
+
+缩略词应列出中英文全称。
+
+\subsubsection{正文}
+
+\paragraph{绪论（引言）}
+绪论（引言）要说明作者所做工作的目的、范围、国内外进展情况、前人研究成果、本人的研究设想、研究方法等。具体要求如下:
+
 \begin{enumerate}[1)]
     \item 须清楚、严谨地论述国内外关于本研究的发展水平与存在的问题；
     \item 应明确地论述本论文研究目的和意义；
@@ -63,161 +89,261 @@
     \item 介绍课题的来源与背景。
 \end{enumerate}
 
-\subsubsection{正文}
-为学位论文的核心部分，占篇幅的绝大部分（约为整个论文的五分之三至五分之四），重点论述研究生本人的独立工作内容和创造性见解，包括理论部分、试验部分和数据处理等，还要附有各种有关的图表、照片、公式等。要求立论正确、逻辑清楚、层次分明、文字流畅、数据真实可靠、公式推导和计算结果无误，图表绘制要少而精。论文若有与导师或他人共同研究的成果，必须明确指出；如果参考或引用了他人的学术成果或学术观点，必须明确注明出处，并与参考文献一致。
+\paragraph{主要内容}
+为学位论文的核心部分，占篇幅的绝大部分（约为整个论文的五分之三至五分之四），重点论述研究生本人的独立工作内容和创造性见解，包括理论部分、试验部分和数据处理等，还要附有各种相关的图表、照片、公式等。要求立论正确、逻辑清楚、层次分明、文字流畅、数据真实可靠、公式推导和计算结果无误，图表绘制要少而精。论文若有与导师或他人共同研究的成果，必须明确指出；如果参考或引用了他人的学术成果或学术观点，必须明确注明出处，并与参考文献一致。
+
+{\bf i） 图}
+
 \begin{enumerate}[1)]
-    \item 图：
-    \begin{enumerate}
-        \item 所有插图应按分章编号，如第1 章，第3 张插图为“图1.3”，所有插图均需有图题（图的说明），图号及图题应在图的下方居中标出；
-        \item 一幅图如有若干幅分图，均应编分图号，用（a），（b），（c）……按顺序编排；
-        \item 插图须紧跟文述。在正文中，一般应先见图号及图的内容后再见图，一般情况下不能提前见图，特殊情况需延后的插图不应跨节；
-        \item 图形符号及各种线型画法须按照现行的国家标准；
-        \item 坐标图中坐标上须注明标度值，并标明坐标轴所表示的物理量名称及量纲，应均按国标标准（SI）标注，例如；kW，m/s 等；
-        \item 提供照片应大小适宜，主题明确，层次清楚，金相照片一定要有放大倍数；
-        \item 图应具有“自明性”，即只看图、图题和图例，不阅读正文，就可理解图意；
-        \item 插图中须完整标注条件，如实验条件、结构参数等；
-        \item 图中用字最小为5 号字；
-        \item 所有插图须在学位论文中统一注明资料来源，该部分可列于参考文献后。其标注格式参见本规定的“文后参考文献著录格式”。
-    \end{enumerate}
-    \item 表
-    \begin{enumerate}
-        \item 建议采用国际上和国内科技编辑界推荐使用三线表。
-        \item 表格应按章编号，如表2.1，并需有表题；
-        \item 表号表题应从表格左上方排列；
-        \item 表格的设计应紧跟文述。若为大表或作为工具使用的表格，可作为附表在附录中给出；
-        \item 表中各物理量及量纲均按国际标准（SI）及国家规定的法定符号和法定计量单位标注；
-        \item 使用他人表格须注明出处。
-    \end{enumerate}
-    \item 公式
-    \begin{enumerate}
-        \item 公式均需有公式号；
-        \item 公式号按章编排，如式（2－3）；
-        \item 公式中各物理量及量纲均按国际标准（SI）及国家规定的法定符号和法定计量单位标注，禁止使用已废弃的符号和计量单位；
-        \item 公式中用字、符号、字体要符合学科规范。
-    \end{enumerate}
-    \item 计量单位：单位名称和符号的书写方式一律采用国际通用符号。
+    \item 所有插图应按分章编号，如第1章，第3张插图为“图1.3”，所有插图均需有图题（图的说明），图的编号及图明应在图的下方居中标出；
+    \item 一幅图如有若干幅分图，均应编分图号，用（a），（b），（c）......按顺序编排；
+    \item 插图须紧跟文述。在正文中，一般应先见图号及图的内容后再见图，一般情况下不能提前见图，特殊情况需延后的插图不应跨节；
+    \item 图形符号及各种线型画法须按照现行的国家标准；
+    \item 坐标图中坐标上须注明标度值，并标明坐标轴所表示的物理量名称及量纲，应均按国标标准（SI）标注，例如；kg，m/s等；坐标图应添加边框，坐标系内部需添加辅助坐标线。坐标图的坐标线均用细实线，粗细不得超过图中曲线；有数字标注的坐标图，必须注明坐标单位。
+    \item 提供照片应大小适宜，主题明确，层次清楚，金相照片一定要有放大倍数；
+    \item 图应具有自明性，即只看图、图题和图例，不阅读正文，就可理解图意；
+    \item 插图中须完整标注条件，如实验条件、结构参数等；
+    \item 图中字号尽量采用五号宋体字（当字数较多时可用小五号宋体字，以清晰表达为原则，但在一个插图内字号要统一）。
+    \item 所有插图须在学位论文中统一注明资料来源，该部分可列于参考文献后。其标注格式参见本规定的“文后参考文献著录格式”。
 \end{enumerate}
 
-\subsubsection{结论}
+{\bf ii） 表}
+
+\begin{enumerate}[1)]%reference
+    \item 表中参数应标明量和单位的符号。为使表格简洁易读，均采用（必要时可加辅助线，三线表无法清晰表达时可采用其他格式），即表的上、下边线为单直线，线粗为1.5磅；第三条线为单直线，线粗为1磅。
+    \item 表单元格中的文字一般应居中书写（上下居中，左右居中），不宜左右居中书写的，可采取两端对齐的方式书写。
+    \item 表格应按章编号，并需有表题，表的编号表题应从表格上方居中排列；
+    \item 表格的设计应紧跟文述。若为大表或作为工具使用的表格，可作为附表在附录中给出；
+    \item 表中各物理量及量纲均按国际标准（SI）及国家规定的法定符号和法定计量单位标注；
+    \item 使用他人表格须注明出处。
+\end{enumerate}
+
+{\bf iii） 数学、物理符号和化学式}
+
+\begin{enumerate}[1)]
+    \item 公式均需有公式号；
+    \item 公式后应注明编号，公式号应置于小括号中，如公（2-3）。写在右边行末，中间不加虚线；
+    \item 公式中各物理量及量纲均按国际标准（SI）及国家规定的法定符号和法定计量单位标注，禁止使用已废弃的符号和计量单位；
+    \item 公式中用字、符号、字体要符合学科规范。
+\end{enumerate}
+
+{\bf iv） 计量单位}
+
+单位名称和符号的书写方式一律采用国际通用符号。
+
+{\bf v） 正文中的层次标号方式}
+
+在正文当中需要进行层次标号时，应使用以下标号的方式。第一级:1. 2. 3.
+
+第二级:(1)(2)(3)
+
+第三级:1)2)3)
+
+第四级:\textcir{1}\textcir{2}\textcir{3}
+
+\paragraph{结论}
+
 结论是对主体的最终结论，用词应准确、完整、精炼。要求简明扼要地概括全部论文所得的若干重要结果，包括理论分析、数值计算及实验研究等结果，着重介绍研究生本人的独立研究和创造性成果及其在本学科领域中的地位和作用，对存在的问题和不足应给予客观的说明，也可提出进一步的设想。
 
-\subsubsection{参考文献}
+\subsubsection{参考文献及注释（脚注）}
+
+参考文献是作者在撰写或编辑论著的过程中，为正文中的直接引语（数据、公式、理论、观点等）或间接引语而提供的有关文献信息资源，是论文的必要组成部分。硕士学位论文，一般不少于40篇，其中，期刊文献不少于30篇，国外文献不少于15篇，均以近5年的文献为主；博士学位论文，一般不少于100篇，其中，期刊文献不少于80篇，国外文献不少于40篇，均以近5年的文献为主。对于申请专业学位的学位论文，参考文献的数量可参照执行。各学位评定分委员会可根据涉及学科专业的特点提出具体要求。
+
+注释（脚注）是正文需要的解释性、说明性、补充性的材料、意见和观点等（多用于人文社科类学位论文）一般列于页脚处，用阿拉伯数字加圆圈标注，如“1”。
+
+参考文献一般集中列于文末，用方括号标注，如“[1]”。参考文献列示的内容务必实事求是。论文中引用过的文献必须著录，未引用的文献不得虚列。遵循学术道德规范，杜绝抄袭、剽窃等学术不端行为。自然科学类学位论文的参考文献序号与正文中标引序号一致；人文社科类学位论文的参考文献可按照类别分别列出，并按统一顺序编号，类别可分为原始档案文献、专著、期刊论文、学位论文、网络文献等；每个类别中中文文献可按照作者姓氏笔画顺序或者音序排序，外文文献可按照作者姓名的字母顺序排序。
+
+参考文献格式规范按照GB/T 7714—2015《信息与文献参考文献著录规则》执行。
+
+\subsubsection{致谢}
+
+
+致谢中主要感谢导师和对学位论文工作有直接贡献和帮助的人和单位。对象一般为:
+
 \begin{enumerate}[1)]
-    \item 参考文献一般应是作者亲自考察过的对学位论文有参考价值的文献，除特殊情况外，一般不应间接使用参考文献；
-    \item 参考文献应具有权威性，要注意引用最新的文献；
-    \item 引用他人的学术观点或学术成果，必须列在参考文献中；
-    \item 参考文献在整个论文中引出处按出现次序依次列出，并在右上角用方括号标注阿拉伯数字编排的序号（必须与参考文献一致）；
-    \item 文后参考文献著录格式（依据国家标准GB/T 7714-2015\footnote{原文为2005。}）：
-    \begin{enumerate}[A.]
-        \item 连续出版物\footnote{关于参考文献格式，强烈建议大家直接参考GB/T 7714-2015，另可参见Package：biblatex-gb7714-2015。}\\
-        ［序号］主要责任者．文献题名［J］．刊名，出版年份，卷号(期号)：起止页码．\\
-        ［1］徐翔，郝际平．关于截面可变形薄壁梁的方法论研究[Ｊ]．西安建筑科技大学学报，2008，40(2)：176-181.
-        \item 专著\\
-        ［序号］主要责任者．文献题名［Ｍ］．出版地：出版者，出版年：页码．\\
-        ［3］陈骥．钢结构稳定理论与设计［Ｍ］．北京：科学出版社，2001：485．
-        \item 会议论文集\\
-        ［序号］析出责任者．析出题名[C]//编者．论文集名．(供选择项：会议名，会址，开会年)出版地：出版者，出版年：起止页码．\\
-        ［6］孙品一．高校学报编辑工作现代化特征［C］//中国高等学校自然科学学报研究会．科技编辑学论文集(2)．北京：北京师范大学出版社，1998：10-22．
-        \item 专著中析出的文献\\
-        ［序号］析出责任者．析出题名[M]//专著责任者．书名．出版地：出版者，出版年：起止页码．\\
-        ［12］罗云．安全科学理论体系的发展及趋势探讨[M]//白春华，何学秋，吴宗之．21世纪安全科学与技术的发展趋势．北京：科学出版社，2000：1-5．
-        \item 学位论文\\
-        ［序号］主要责任者．文献题名［Ｄ］．保存地：保存单位，年份.\\
-        ［7］邵永健．型钢轻骨料混凝土梁的力学性能及设计方法的试验研究［Ｄ］．西安：西安建筑科技大学，2008.
-        \item 报告\\
-        ［序号］主要责任者．文献题名［Ｒ］．报告地：报告会主办单位，年份.\\
-        ［9］冯西桥．核反应堆压力容器的LBB 分析［Ｒ］．北京：清华大学核能技术设计研究院，1997.
-        \item 专利文献\\
-        ［序号］专利所有者．专利题名［P］．专利国别：专利号，发布日期.\\
-        ［11］姜锡洲．一种温热外敷药制备方案［Ｐ］．中国专利：881056078，1983-08-12.
-        \item 国际、国家标准\\
-        ［序号］标准代号．标准名称［S］．出版地：出版者，出版年.\\
-        ［1］GB/T 16159-1996．汉语拼音正词法基本规则［S］．北京：中国标准出版社，1996.
-        \item 报纸文章\\
-        ［序号］主要责任者．文献题名［Ｎ］．报纸名，出版年-月-日(版次)．\\
-        ［13］谢希德．创造学习的思路[Ｎ]．人民日报，1998-12-25(10).
-        \item 电子文献\\
-        ［序号］主要责任者．电子文献题名［文献类型/载体类型］．电子文献的出版或可获得地址(电子文献地址用文字表述)，发表或更新日期/引用日期(任选)；\\
-        ［21］姚伯元．毕业设计(论文)规范化管理与培养学生综合素质［EB/OL］．中国高等教育网教学研究，2005-02-02；
-    \end{enumerate}
+    \item 指导或协助指导完成学位论文的导师或导师团队；
+    \item 资助基金、合同单位、其他提供资助或支持的企业、组织或个人；
+    \item 协助完成研究工作和提供便利条件的组织或个人；
+    \item 在研究工作中提出建议和提供帮助的人；
+    \item 给予转载和引用权的资料、图片和文献等，研究思路和设想的所有者。
 \end{enumerate}
 
-附：参考文献著录中的文献类别代码
+\subsection{结尾部分，包括与论文有关的公式推导、数据和图表、问卷调查、攻读学位期间取得的研究成果等}
 
-普通图书：M \hspace{2em} 会议录：C \hspace{2em} 汇编：G \hspace{2em} 
+附录是作为论文主体的补充项目，并不是必需的。以下内容可置于附录之内:
 
-报纸：N \hspace{2em} 期刊：J \hspace{2em} 学位论文：D \hspace{2em} 
-
-报告：R \hspace{2em} 标准：S \hspace{2em} 专利：P \hspace{2em} 
-
-数据库：DB \hspace{2em} \hspace{2em} 计算机程序：CP 电子公告：EB
-
-\subsubsection{作者在读期间的研究成果}
-在学位论文的最后，应附上研究生本人在攻读学位期间所发表的论著（发表和录用）、获得的专利、获奖的科研成果、鉴定及工程实现的社会评价及有关资料等，书写格式参照参考文献。
-
-\subsection{附录部分}
-包括与论文有关的公式推导、数据和图表、致谢等。
 \begin{enumerate}[1)]
-    \item 论文中过长的公式推导与证明过程可在附录中依次给出。
-    \item 与本文紧密相关的非作者自己的分析，证明及工具用表格等。
-    \item 在正文中无法列出的实验数据。
-    \item 致谢
-    \begin{enumerate}
-        \item 致谢中主要感谢导师和对论文工作有直接贡献及帮助的人士和单位。谢辞谦虚    诚恳，实事求是。不应过分地感谢研究生的家属及亲朋好友等与论文无直接关系的帮助；
-        \item 致谢中还应感谢提供研究经费及实验装置的基金会或企业等单位和人士；
-        \item 致谢中一般不用第一人称（可用“作者”），结束时应手签研究生姓名。
-    \end{enumerate}
+    \item 放在正文内过分冗长的公式推导；
+    \item 辅助性工具或表格；
+    \item 重复性数据和图表；
+    \item 必要的程序说明和程序全文；
+    \item 关键调查问卷或方案等。
+\end{enumerate}
+
+攻读学位期间取得的研究成果是学位申请人在攻读学位期间取得的与学位论文相关的研究成果。包括:
+
+\begin{enumerate}[1)]
+    \item 已发表和已录用的主要学术论文、已出版和出版社已决定出版的专著；
+    \item 主要科研获奖；
+    \item 已获授权的发明专利；
+    \item 其他重要学术成果。
 \end{enumerate}
 
 \section{学位论文的格式要求}
-论文一般使用简体中文撰写，但不得使用不合规定的简化字、复合字、异体字或乱造汉字。全文建议打印刊出，如手抄，须清晰整洁。因特殊情况需用外文撰写的，须向研究生院提交申请，外文语种一般限英文。
-\begin{enumerate}
-    \item 论文封面的用字规格\\
-    封面内容如打印，除“学号”、“论文提交日期”、“论文答辩日期”栏目字体采用黑体，字号为三号，其余栏目字体为楷体\_GB2312，字号为三号，加粗。
-    \item 论文摘要及正文的用字规格\\
-    中文基本用字为宋体、英文为“Times News Roman”，小四号，正文中的图名和表名采用相应的五号字体。
-    \item 论文的页面及版面的设置规格\\
-    论文的页面和版面包括章、节的标题、页眉、页码要求层次清楚、整齐划一；论文采用双面复印，为了便于装订、复制，要求每页纸的四周留有足够的空白边缘。具体要求见下表\footnote{跨页表格示例}。
-\end{enumerate}
 
-\begin{longtable}[c]{@{\extracolsep{\fill}}c|m{0.8\linewidth}}
-    \bicaption{版面要求}{Page layout}\\
-    \hline
-    {\heiti 格式项目}        &   \multicolumn{1}{c}{\heiti 设置要求}   \\ \hline
-    \endfirsthead
+\subsection{纸张要求与页面设置要求（其中的数字与单位之间应有空格）}
 
-    \multicolumn{2}{r}{续上表} \\ \hline
-    {\heiti 格式项目}        &   \multicolumn{1}{c}{\heiti 设置要求}   \\ \hline
-    \endhead
+论文一般使用简体中文撰写，不得使用不合规定的简化字、复合字、异体字或乱造汉字，全文建议打印刊出。因特殊情况需用外文撰写的，须向研究生院提交申请，外文语种一般限英文。
 
-    纸张            &   A4（210$\times$297mm）； \\\hline
-    页边距      &    上3cm 下2cm 左2.5cm 右2.5cm；    \\\hline
-    装订线      &1cm；    \\\hline
-    页眉        &2cm；    \\\hline
-    页脚        &1.5cm；  \\\hline
-    题目        &    中文为三号方正小标宋体简体、英文为三号Times New Roman 加粗字体，段前、段后各1行；  \\\hline
-    副标题      &中文为小三号方正小标宋体简体、英文为Times New Roman；    \\\hline
-    \multirow{3}{*}{中文摘要}   &   专业：$\times\times\times$——小四号楷体；\\
-                                &   硕士生：$\times\times\times$——小四号楷体；\\
-                                &   指导教师：$\times\times\times$——小四号楷体；\\\hline
-    中文摘要内容    &   “摘要”为三号黑体，段前1 行、段后0.5 行；摘要内容中文为小四号宋体、英文为Times New Roman，行距最小值为22 磅；关键词中文为小四号宋体、英文为Times New Roman 加粗字体，段前0.5 行，首行无缩进；\\\hline
-    英文摘要        &   “ABSTRACT”为三号Times New Roman 加粗字体，段前1 行、段后0.5 行；内容为小四号Times New Roman 字体，行距为最小值22 磅“Keywords”为小四号Times New Roman 加粗字体，段前0.5 行，首行无缩进；\\\hline
-    目录            &   “目录”为三号黑体，段前、段后各1.5 行，居中；目录内容中文为小四号宋体、英文为Times New Roman，行距最小值为22 磅；\\\hline
-    一级标题    &中文为三号黑体、英文为Times New Roman，段前、段后各1 行，居中；\\\hline
-    二级标题    &中文为四号黑体、英文为Times New Roman，段前、段后各0.5 行，居左；\\\hline
-    三级标题        &中文为小四号宋体、英文为Times New Roman，加粗，段前、段后各0.5 行，居左；\\\hline
-    \multirow{3}{*}{正文}    &   中文为小四号宋体、英文为Times New Roman 字体；行距：最小值22 磅（包括公式）；\\
-                                &   表名、图名：五号宋体、Times New Roman 字体；\\
-                                &   表格里字号：五号宋体、Times New Roman（如内容过多可用小五号）；\\\hline
-    页眉    &   小四号宋体居中，线型：2.5 磅，上粗下细，如：西安建筑科技大学硕士（博士）学位论文；\\\hline
-    其他注解    &   如：脚注、尾注、资料来源、图片来源、图片说明等中文用小五号宋体字、英文用Times New Roman；\\\hline
-    页码    &   中英文摘要页不加页码，目录页码用罗马数字（I II III）标识，正文用阿拉伯数字（1 2 3）标识；页码放置页面外侧下角，页码字号为五号字；\\\hline
-    参考文献    &   “参考文献”(居中)作为标志；参考文献的序号左顶格，并用数字加方括号表示，如[1]、[2]、…；参考文献中的标点符号均采用英文半角标点符号形式，每条文献的末尾均以“.”结束；中文字体为小四号宋体，英文字体为小四号Times New Roman。\\\hline
-\end{longtable}
+\begin{table}[!htbp]
+    \centering
+    \caption{纸张要求与页面设置格式要求}
+    \label{tab:3_1}
+    \begin{tblr}{colspec={|X|X|},row{1}={font=\bf,halign=c},column{1}={halign=c},rows={valign=m}}
+        \toprule
+        项目名称 & 要求 \\ 
+        \midrule 
+        纸张 & A4（210 mm$\times$297 mm），幅面白色 \\ \midrule 
+        页边距 & 上 3cm 下 2cm 左 2.5cm 右 2.5cm，装订线 0.5cm \\ \midrule 
+        页眉 & 2cm，五号宋体居中，线型:1.5 磅，上粗下细。奇数页页眉正文中相应各章的名称，偶数页页眉为“西安建筑科技大学博士学位论文”或“西安建筑科技大学硕士学位论文” \\ \midrule 
+        页脚 & 1.5cm，中英文摘要页及目录页码用罗马数字（I II III）标识，正文中页码用阿拉伯数字（123）标识，放置页面外侧下角，页码字号为 Times New Roman 五号字 \\
+        \bottomrule
+    \end{tblr}
+\end{table}
 
-\section{学位论文的装订说明}
-学位论文要求以A4 号纸的大小标准，以双面打印的方式进行装订。学位论文答辩通过后，研究生应结合答辩委员会意见，对学位论文进行完善，并向以下单位提交完整版学位论文全文，其中：
+\subsection{论文外封面}
 
-校图书馆纸质版、电子版（按图书馆相关要求提供）各1 份、所在学院资料室纸质版1 份、研究生院纸质版1 份（仅博士研究生需提供），综合档案馆纸质版、电子版（按档案归档要求提供光盘）各1 份。
+\begin{table}[!htbp]
+    \centering
+    \caption{论文外封面格式要求}
+    \label{tab:3_2}
+    \begin{tblr}{colspec={|X|X|},row{1}={font=\bf},columns={halign=c},rows={valign=m},}
+        \toprule
+        项目名称 & 格式要求 \\ 
+        \midrule 
+        分类号 & 小四号 Times New Roman \\ \midrule
+        论文题目 & 三号黑体字，英文 Times New Roman \\ \midrule
+        作者姓名 & 四号黑体字 \\ \midrule
+        学号 & 阿拉伯数字四号 Times New Roman \\ \midrule
+        所在学院 & 四号黑体字 \\ \midrule
+        学科名称/类别（领域） & 四号黑体字 \\ \midrule
+        指导教师 & 四号黑体字 \\ \midrule
+        答辩日期 & 四号黑体字，阿拉伯数字四号 Times New Roman \\
+        \bottomrule
+    \end{tblr}
+\end{table}
+
+\subsection{书脊与中英文内页封面、指导教师团队页（如有）、答辩委员会页}
+
+学位论文的书脊用黑体五号字（可根据论文厚度适当调整）。上方写论文题目，中间写学号，作者姓名，下方写指导教师，上下边界不少于1.5cm。
+
+中英文内页封面、指导教师团队页（如有）、答辩委员会页按照研究生院提供的格式填写。
+
+\subsection{摘要和关键词}
+
+\begin{table}[!htbp]
+    \centering
+    \caption{摘要和关键词格式要求}
+    \label{tab:3_3}
+    \begin{tblr}{colspec={|X[2cm]|X|X|},row{1}={font=\bf,halign=c},column{1}={halign=c},rows={valign=m}}
+        \toprule
+        项目名称 & 中文格式要求 & 英文格式要求\\ 
+        \midrule 
+        论文题目 & 小二号黑体，段前0行，段后0.5行，行距为固定值24磅 & 小二号Times New Roman，首字母大写加粗字体，段前0行，段后0.5行，行距为固定值24磅 \\ \midrule
+        摘要标题 & 三号黑体，二字间空1个汉字字符，段前1行、段后0.5行，行距为单倍行距 & 三号Times New Roman大写加粗字体，段前1行、段后0.5行，行距为单倍行距 \\ \midrule
+        摘要正文 & 小四号宋体，段落首行左缩进2个字符，行距为最小值22磅 & 小四号Times New Roman，段落首行缩进2个字符，行距为最小值22磅 \\ \midrule
+        关键词 & 关键词行与摘要行之间空1行关键词:小四号黑体，段前0.5行，段后0行，行距为最小值22磅，首行无缩进 & 关键词行与摘要行之间空1行，小四号Times New Roman加粗字体，段前0.5行，行距为最小值22磅，首行无缩进 \\ \midrule
+        关键词内容 & 小四号宋体，用中文分号“；”分割，最后一个关键词后不打标点符号，段前0.5行，段后0行，行距为最小值22磅 & 小四号Times New Roman字体，段前0.5行，段后0行，行距为最小值22磅。每个关键词组的第一个字母大写，其余为小写，每一关键词之间用英文分号“；”分割，最后一个关键词后不打标点符号 \\ \midrule
+        论文类型 & 论文类型行与关键词行之间空1行，小四号黑体，段前0.5行，段后0行，行距为最小值22磅，首行无缩进 & 论文类型行与关键词行之间空1行，小四号Times New Roman加粗字体，段前0.5行，段后0行，行距为最小值22磅，首行无缩进 \\ \midrule
+        论文类型内容 & 小四号宋体，段前0.5行，段后0行，行距为最小值22磅 & 小四号Times New Roman字体，段前0.5行，段后0行，行距为最小值22磅。与中文摘要中的论文类型一致；每个单词第一个字母大写，其余为小写 \\
+        \bottomrule
+    \end{tblr}
+\end{table}
+
+\subsection{目录}
+
+\begin{table}[!htbp]
+    \centering
+    \caption{目录}
+    \label{tab:3_4}
+    \begin{tblr}{colspec={|X[3cm]|X|},row{1}={font=\bf,halign=c},column{1}={halign=c},rows={valign=m}}
+        \toprule
+        项目名称 & 格式要求 \\ 
+        \midrule 
+        标题 & 三号黑体，二字间空1个汉字字符，段前、段后各1行，居中，行距为单倍行距 \\ \midrule 
+        一级标题 & 中文小四黑体，英文小四Times New Roman，段前、段后0行，行距为最小值22磅。“第X章”与标题之间空1个汉字字符 \\ \midrule 
+        二级标题 & 中文小四宋体，英文小四Times New Roman，段前、段后0行，行距为最小值22磅。编号与标题之间空1个英文字符 \\ \midrule 
+        三级标题 & 中文小四宋体，英文小四Times New Roman，段前、段后0行，行距为最小值22磅。编号与标题之间空1个英文字符 \\
+        \bottomrule
+    \end{tblr}
+\end{table}
+
+\clearpage
+\subsection{正文}
+
+\begin{table}[!htbp]
+    \centering
+    \caption{正文格式要求}
+    \label{tab:3_5}
+    \begin{tblr}{colspec={|X[3cm]|X|},row{1}={font=\bf,halign=c},column{1}={halign=c},rows={valign=m}}
+        \toprule
+        项目名称 & 格式要求 \\ 
+        \midrule 
+        一级标题 & 中文三号黑体，英文三号Times New Roman，居中，段前1行，段后1行，单倍行距，“第X章”与标题之间空1个汉字字符 \\ \midrule 
+        二级标题 & 中文四号黑体，英文四号Times New Roman，段前、段后各0.5行，行距为单倍行距，居左，编号与标题之间空1个英文字符的间隙 \\ \midrule 
+        三级标题 & 中文小四号宋体，英文Times New Roman加粗，段前、段后各0.5行，行距为单倍行距，居左，编号与标题之间空1个英文字符的间隙 \\ \midrule 
+        正文 & 中文小四号宋体，英文小四号Times New Roman，两端对齐，段落首行左缩进2个字符，行距为最小值22磅（段落中有数学表达式时，可根据表达需要设置该段的行距） \\ \midrule 
+        脚注/注释 & 置于页脚处，中文小五号宋体，英文小五号Times New Roman，单倍行距 \\ \midrule 
+        图的编号、图题、图例 & 图的编号、图题置于图的下方，居中。中文五号宋体，英文（如有）为五号Times New Roman，居中，行距为最小值14磅；坐标图边框为0.5磅实线，图内字体五号中文宋体、英文Times New Roman字体图例一般置于图题的下方，可根据排版方式置于图的其他方位，中文五号宋体，英文五号Times New Roman \\ \midrule 
+        表的编号、表题、表注 & 表的编号、表题置于表的上方，中文五号宋体，英文五号Times New Roman，居中；中文表题段前0.5行，段后0行，行距为最小值14磅，英文表题段前段后0行，行距为最小值14磅；三线表上下线型为1.5磅，中线型为1磅表注置于表的下方，中文五号宋体，英文五号Times New Roman，居中（若表注超过一行，居左），段前段后0行，行距为最小值14磅 \\ \midrule 
+        表格内容 & 中文五号宋体，英文五号Times New Roman（如内容过多可用小五号） \\
+        \bottomrule
+    \end{tblr}
+\end{table}
 
 
+\subsection{参考文献、致谢}
+
+\begin{table}[!htbp]
+    \centering
+    \caption{参考文献、致谢格式要求}
+    \label{tab:3_6}
+    \begin{tblr}{colspec={|X[3cm]|X|},row{1}={font=\bf,halign=c},column{1}={halign=c},rows={valign=m}}
+        \toprule
+        项目名称 & 格式要求 \\ 
+        \midrule 
+        参考文献 & 中文三号黑体，居中，段前、段后1行，行距为单倍行距 \\ \midrule 
+        参考文献条目 & 标点符号均采用半角；参考文献的序号左顶格，并用数字加方括号表示，如[1]序号与文献内容之间空1个英文字符；每条文献的末尾均以“.”结束，中文字体为小四号宋体，英文字体为小四号Times New Roman，悬挂缩进2字符，段前段后0行，行距为1.25倍行距，被引用文献的标题首字母需大写 \\ \midrule 
+        致谢 & {{\bf 标题}:中文三号黑体，居中，段前、段后1行，行距为单倍行距\\{\bf 内容}:中文小四号宋体，英文小四号Times New Roman。段落首行左缩进2个字符，行距为最小值22磅} \\
+        \bottomrule
+    \end{tblr}
+\end{table}
+
+\clearpage
+\subsection{公式推导、数据和图表、问卷调查、攻读学位期间取得的研究成果}
+
+\begin{table}[!htbp]
+    \centering
+    \caption{附录格式要求}
+    \label{tab:3_7}
+    \begin{tblr}{colspec={|X[3cm]|X|},row{1}={font=\bf,halign=c},column{1}={halign=c},rows={valign=m}}
+        \toprule
+        项目名称 & 格式要求 \\ 
+        \midrule 
+        附录（公式推导、数据和图表、问卷调查等） & {{\bf 标题}:中文三号黑体，居中，段前、段后1行，行距为单倍行距\\
+{\bf 内容}:中文小四号宋体，英文小四号Times New Roman，行距为最小值22磅（段落中有数学表达式时，可根据表达需要设置该段的行距）} \\ \midrule 
+        攻读博/硕士学位期间取得的研究成果 & {{\bf 标题}:中文三号黑体，居中，段前、段后1行，行距为单倍行距\\
+{\bf 成果类别标题}:中文小四号宋体，加粗，英文小四号Times New Roman，行距为1.25倍行距\\
+{\bf 成果项目序号}:左顶格，并用数字加方括号表示，如[1]\\
+{\bf 成果内容}:中文小四号宋体，英文小四号Times New Roman，行距为1.25倍行距}\\
+        \bottomrule
+    \end{tblr}
+\end{table}
+
+\subsection{印刷与归档要求}
+
+学位论文要求以双面打印的方式进行装订。
+
+学位论文答辩通过后，研究生应结合答辩委员会意见，对学位论文进行完善，并向以下单位提交完整版学位论文全文，其中:
+
+校图书馆纸质版、电子版（按图书馆相关要求提供）各1份、所在学院资料室纸质版1份、研究生院纸质版1份（仅博士研究生需提供），综合档案馆纸质版、电子版（按档案归档要求提供光盘）各1份。
