--- a/XAUATutils.sty
+++ b/XAUATutils.sty
@@ -1,9 +1,5 @@
 \ProvidesPackage{XAUATutils}[2022/09/16 15:29:14 put any packages you would like to use here]
 
-% 定义三种新的column对齐格式，允许使用L C R的带长度的表格列
-\newcolumntype{L}[1]{>{\raggedright\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}           
-\newcolumntype{C}[1]{>{\centering\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
-\newcolumntype{R}[1]{>{\raggedleft\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
-
+\newcommand{\textcir}[1]{\textcircled{\raisebox{-0.9pt}{#1}}}
 
 \endinput
